--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default header-highlight">
+<div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-header">
         <a class="navbar-brand" href="{{ path('bdd_index') }}">
             <img src="{{ asset('images/logo_light.png') }}" alt="Coasters World">
@@ -40,7 +40,7 @@
                 </li>
             {% endif %}
             <li>
-                <p class="navbar-text"><span class="label label-flat border-info text-info-600">BETA</span></p>
+                <p class="navbar-text"><span class="label label-flat border-white text-white">BETA</span></p>
             </li>
         </ul>
     </div>
