--- a/app/Resources/views/page_header.html.twig
+++ b/app/Resources/views/page_header.html.twig
@@ -1,5 +1,4 @@
-<!-- Page header -->
-<div class="page-header">
+<div class="page-header page-header-default">
     <div class="page-header-content">
         <div class="page-title">
             <h1><a style="color:#333;" onclick="goBack();"><i class="icon-arrow-left52 position-left"></i></a>
@@ -7,7 +6,7 @@
                 {% if subTitle %} - {{ subTitle }}{% endif %}
             </h1>
         </div>
-        <div class="heading-elements">
+        <div class="heading-elements visible-elements">
             <form class="heading-form" action="#">
                 <div class="form-group">
                     <div class="has-feedback">
@@ -22,7 +21,7 @@
         </div>
     </div>
 </div>
-<script>
+<script type="text/javascript">
     function goBack() {
         window.history.back();
     }
