--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -20,6 +20,13 @@
                             <i class="icon-users4"></i> <span>Palmarès des membres</span>
                         </a>
                     </li>
+                    {% if is_granted('ROLE_PREVIEW_FEATURE') %}
+                    <li>
+                        <a href="{{ path('map_index') }}">
+                            <i class="icon-location3"></i> <span>Carte des coasters</span>
+                        </a>
+                    </li>
+                    {% endif %}
                     <li>
                         <a href="https://coastersworld.fr/"><i class="icon-newspaper2"></i> <span>Actualités</span></a>
                     </li>
