need locale for search

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -45,8 +45,9 @@
                 </li>
             {% else %}
                 <li>
-                    <a href="{{ path('facebook_login') }}" data-popup="tooltip" title="All activity"><i
-                                class="icon-lock display-block"></i></a>
+                    <a href="{{ path('facebook_login') }}" data-popup="tooltip" title="Login">
+                        <i class="icon-lock display-block"></i>
+                    </a>
                 </li>
             {% endif %}
             <li>
