--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -71,7 +71,7 @@
 <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
 <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
 <script type="text/javascript">
-    let url = Routing.generate('bdd_ajax_search_all_coaster');
+    let url = Routing.generate('coaster_search_all_json', {'_locale': '{{ app.request.locale }}'});
     let dataSource = new Bloodhound({
         datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
         queryTokenizer: Bloodhound.tokenizers.whitespace,
