--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,5 +1,4 @@
 <div class="footer text-muted">
     &copy; {{ 'now'|date('Y') }}.
-    Made with <i class="icon-heart6"></i> by the <a href="https://coastersworld.fr" target="_blank">Coasters World</a>
-    community.
+    Made with <i class="icon-heart6"></i> by Captain Coaster.
 </div>
