fixes user list

--- a/src/BddBundle/Resources/views/User/list.html.twig
+++ b/src/BddBundle/Resources/views/User/list.html.twig
@@ -1,7 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% set title = 'Palmarès des membres' %}
-{% set subTitle = '' %}
+{% set title = 'user_list.title'|trans %}
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
@@ -9,14 +8,13 @@
     <div class="alert alert-info alert-styled-left alert-arrow-left alert-component">
         <button type="button" class="close" data-dismiss="alert"><span>&times;</span><span class="sr-only">Close</span>
         </button>
-        <h6 class="alert-heading text-semibold">Alors, t'en es où dans tes notes ?</h6>
-        <p>Ce classement te permet de savoir où tu te situes sur l'ensemble des membres qui ont noté des coasters, mais
-        aussi de voir le détail de leurs notes !</p>
+        <h6 class="alert-heading text-semibold">{{ 'user_list.info.title'|trans }}</h6>
+        <p>{{ 'user_list.info.text'|trans }}</p>
     </div>
     <!-- /info alert -->
     <ul class="media-list content-group">
         {% for user in users %}
-            <div class="col-md-3">
+            <div class="col-lg-4 col-sm-6">
                 <div class="panel panel-body">
                     <div class="media">
                         <div class="media-left">
@@ -31,12 +29,12 @@
                         <div class="media-body">
                             <h6 class="media-heading">{{ user.0.username }}</h6>
                             <p class="text-muted">
-                                Membre depuis le {{ user.0.createdAt|date("d/m/Y") }}
+                                {{ 'user_list.member_from'|trans }} {{ user.0.createdAt|date("d/m/Y") }}
                             </p>
 
                             <h5 class="text-semibold no-margin">
                                 <a href="{{ path('user_ratings', {'id': user.0.id}) }}">
-                                    {{ 'notes'|transchoice(user.total_ratings, [], 'messages', 'fr') }}
+                                    {{ 'user_list.rating'|transchoice(user.total_ratings) }}
                                 </a>
                             </h5>
                         </div>
